<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyWidgetCollection</string>
    <string name="hello_blank_fragment">헬로~ 프레그먼트~</string>

    <string name="contained_btn">면처리 버튼</string>
    <string name="outlined_btn">아웃라인 버튼</string>
    <string name="text_btn">텍스트 버튼</string>

    <string name="today">투데이</string>
    <string name="life_record">생기부</string>
    <string name="calendar">캘린더</string>
    <string name="mode">멀티모드</string>
    <string name="setting">설정</string>

    <string name="action_today">TODAY</string>
    <string name="action_life_record">LIFE_RECORD</string>
    <string name="action_calendar">CALENDAR</string>
    <string name="action_mode">MODE</string>
    <string name="action_setting">SETTING</string>

    <string name="btn">버튼</string>

    <string name="cancel">취소</string>
    <string name="ok">확인</string>
</resources>