<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/main_frag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_nav"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </FrameLayout>

    <navigation.BottomNavigationContainer
        android:id="@+id/main_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff"
        app:nv_text_styles="@style/bottom_nav_text"
        app:nv_item_selector="@drawable/checkable_bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <navigation.BottomNavigationItem
            android:id="@+id/test_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_src="@drawable/bottom_record"
            app:nv_text="@string/today"
            app:nv_action="@string/action_today"
            />

        <navigation.BottomNavigationItem
            android:id="@+id/test_life_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_src="@drawable/bottom_life_record"
            app:nv_text="@string/life_record"
            app:nv_action="@string/action_life_record"
            />

        <navigation.BottomNavigationItem
            android:id="@+id/test_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_src="@drawable/bottom_calendar"
            app:nv_text="@string/calendar"
            app:nv_action="@string/action_calendar"
            />

        <navigation.BottomNavigationItem
            android:id="@+id/test_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_src="@drawable/bookmark"
            app:nv_text="@string/mode"
            app:nv_action="@string/action_setting"
            />

        <navigation.BottomNavigationItem
            android:id="@+id/test_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_src="@drawable/bottom_exam"
            app:nv_text="@string/setting"
            app:nv_action="@string/action_setting"
            />


    </navigation.BottomNavigationContainer>

</androidx.constraintlayout.widget.ConstraintLayout>