<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fragment.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <button.IconButton
            android:id="@+id/contained_btn"
            style="@style/UPlus.Button.Contained"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/contained_btn" />

        <button.IconButton
            android:id="@+id/outlined_btn"
            style="@style/UPlus.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/outlined_btn" />

        <button.IconButton
            android:id="@+id/text_btn"
            style="@style/UPlus.Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/text_btn" />

        <button.IconButton
            android:id="@+id/icon_btn"
            style="@style/UPlus.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>