<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".TestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <button.IconButton-->
<!--            android:id="@+id/btn_0"-->
<!--            style="@style/upuls_standard_icon_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:drawableLeft="@drawable/ic_baseline_cast_24"-->
<!--            android:text="Hello World!!!!!!!!" />-->

        <button.IconButton
            android:id="@+id/contained_btn"
            style="@style/UPlus.Button.Contained"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/contained_btn" />

        <button.IconButton
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/outlined_btn"
            style="@style/UPlus.Button.Outlined"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/outlined_btn" />

        <button.IconButton
            android:id="@+id/text_btn"
            style="@style/UPlus.Button.Text"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/text_btn" />

        <button.IconButton
            android:layout_marginTop="10dp"
            android:id="@+id/icon_btn"
            style="@style/UPlus.Button.Icon"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_cast_24"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            fab:fab_addButtonColorNormal="@color/red"
            fab:fab_addButtonColorPressed="@color/red_pressed"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_labelStyle="@style/menu_labels_style">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_title="Action A" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_title="Action with a very long name that won\'t fit on the screen" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>